# PicoPixel

./: CMakeLists.txt  LICENSE  README.md  transfer_uf2.sh  watch_serial.sh
lib/: CMakeLists.txt
scripts/: send_and_watch.sh  transfer_uf2.sh
src/: PicoPixel.cpp  fs_init.c  ili9341.cpp  ili9341.hpp  ili9341HardwareCommands.hpp  log.hpp  main.cpp  menu.cpp  menu.hpp
src/drivers/display/: ili9341.cpp  ili9341.hpp
src/drivers/display/fonts/: RobotoMono-SemiBold.c  RobotoMono-SemiBold.h
src/drivers/potentiometer/: b10k.cpp  b10k.hpp
src/firmware/: boot.cpp  boot.hpp
src/games/: game.cpp  game.hpp  gameRegistry.cpp  gameRegistry.hpp
src/games/PicoSpace/: PicoSpace.cpp  PicoSpace.hpp
src/games/pong/: pong.cpp  pong.hpp
src/games/template/: exampleGame.cpp  exampleGame.hpp
src/graphics/: graphics.cpp  graphics.hpp  text.hpp
src/utils/: color.cpp  color.hpp  math.hpp  random.cpp  random.hpp
